force-app/main/default/objects/Product2/fields/Integration_Description__c.field-meta.xml
<CustomField>
    <fullName>Integration_Description__c</fullName>
    <description>Description used for Integration purpose</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Integration Description</label>
    <type>TextArea</type>
</CustomField>