force-app/main/default/objects/Product2/fields/Is_Medical_Advice_Number_Exception__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical_Advice_Number_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to tell if a Product has more than one Medical Advice Number associated to it.</description>
    <label>Is Medical Advice Number Exception?</label>
    <type>Checkbox</type>
</CustomField>