force-app/main/default/objects/Product2/fields/Is_Medical_Advice_Numbered_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Medical_Advice_Numbered_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to confirm if the product is a Medical Advice Numbered product or not. Used for Germany.</description>
    <label>Is Medical Advice Numbered Product?</label>
    <type>Checkbox</type>
</CustomField>