force-app/main/default/objects/Product2/fields/Is_Virtual_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Virtual_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Jagan 01/09/2018 - Created this field to track if a product is a virtual product or not.</description>
    <label>Is Virtual Product?</label>
    <type>Checkbox</type>
</CustomField>