force-app/main/default/objects/Product2/fields/Tech_Support_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Tech_Support_Sort_Order__c</fullName>
    <description>Inside Sales Sort Order</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>