force-app/main/default/objects/Product2/listViews/All_Medical_Advice_Number_Products.listView-meta.xml
<ListView>
    <fullName>All_Medical_Advice_Number_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Integration_Description__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Medical_Advice_Numbered_Product__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Medical Advice Number Products</label>
    <language>en_US</language>
</ListView>